# IE_306_Drone_Dispatch...

./: .gitignore  AI_USE.md  CONTRIBUTIONS.md  DATASET.md  IE306_TermProject_Sezen_Ozan_TubaNur.222docx.docx  IE306_TermProject_Sezen_Ozan_TubaNur_FINALLY.docx  README.md  REPORT.docx  REPORT.md  START_HERE.txt  pyproject.toml  pytest_output.txt  requirements.txt  run_all.py  run_all_output.txt
code/: aggregate_factored_dqn.py  eval_dqn.py  offline_rl.py  plot_curves.py  plot_factored_dqn.py  plot_ma_seeds.py  plot_offline_qdiverge.py  run_ma_seeds.py  run_offline_seeds.py  train_dqn.py  train_factored_dqn.py  train_ma_idqn.py
configs/: ablation_gae.yaml  ddpg_td3.yaml  dqn.yaml  factored_double_dqn.yaml  factored_double_dqn_notarget.yaml  ma_idqn.yaml  offline_cql.yaml  reinforce.yaml  role_c_rollout.yaml
logs/: ablation_gae_lam0p0_seed2.csv  ablation_gae_lam0p95_seed2.csv  ablation_gae_lam0p99_seed2.csv  ablation_gae_lam0p9_seed2.csv  ablation_gae_lam1p0_seed2.csv  ddpg_seed0.csv  ddpg_seed1.csv  ddpg_seed2.csv  double_dqn_nstep_6m_eval.csv  dqn_seed0.csv  dqn_seed0_eval.json  engineering_log.md  factored_double_dqn_notarget_seed0.csv  factored_double_dqn_results.json  factored_double_dqn_seed0.csv  factored_double_dqn_seed1.csv  factored_double_dqn_seed2.csv  ma_idqn_seed0.csv  ma_idqn_seed1.csv  ma_idqn_seed2.csv  ma_results.json  ma_results_seed0.json  ma_results_seed1.json  ma_results_seed2.json  offline_qstats.csv  offline_qstats_seed0.csv  offline_qstats_seed1.csv  offline_qstats_seed2.csv  offline_results.json  offline_results_seed0.json  reinforce_seed0.csv  (+6 more)
(+13 files in other folders)
