[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_dispatch_env"
version = "0.1.0"
description = "Operational drone-dispatch RL simulator (course term project env)"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==1.3.0",
    "numpy==2.2.6",
    "matplotlib==3.10.6",
    "imageio==2.37.2",
    "pulp==3.3.2",
    "pyyaml==6.0.3",
]

[tool.setuptools]
py-modules = ["agent_interface"]

[tool.setuptools.packages.find]
include = ["drone_dispatch_env*"]
